--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>后台</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!--引入百度地图API-->
+      <script src='http://api.map.baidu.com/api?v=2.0&ak=dquGDM8n8zviDvz9tU4azo19VICe4mWk'></script>
+    </div>
   </body>
 </html>
